feat: initialize my-app and my-lib projects with basic structure and components
- Created app component with title and template.
- Added app routing configuration.
- Set up application bootstrap with Angular's bootstrapApplication.
- Implemented unit tests for app component.
- Established my-lib library with a sample component and service.
- Included necessary TypeScript configuration files for both app and library.
- Added README and package.json for my-lib with build and publish instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ npm-debug.log
 yarn-error.log
 
 # IDEs and editors
+.github
 .idea/
+.vscode
 .project
 .classpath
 .c9/
@@ -29,7 +31,7 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-/.angular/cache
+/.angular
 .sass-cache/
 /connect.lock
 /coverage
