--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "ng serve my-app",
-    "test": "ng test",
-    "watch:lib": "ng build my-lib --watch --configuration development",
-    "watch:app": "ng serve my-app --watch"
+    "test:unit": "ng test my-lib --karma-config=./karma.conf.js --code-coverage=true --watch=false",
+    "test:app": "ng test my-app --karma-config=./karma.conf.js --code-coverage=true --watch=false",
+    "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
+    "watch-lib": "ng build my-lib --watch --configuration development",
+    "watch-app": "ng serve my-app --watch"
   },
   "private": true,
   "dependencies": {
