--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:app": "ng test my-app --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
     "watch-lib": "ng build my-lib --watch --configuration development",
-    "watch-app": "ng serve my-app --watch"
+    "watch-app": "ng serve my-app --watch",
+    "test:schematics": "npx jasmine projects/my-lib/schematics/dist/schematics/**/*.spec.js",
+    "build:schematics": "tsc -p projects/my-lib/schematics/tsconfig.schematics.json && cp projects/my-lib/schematics/collection.json projects/my-lib/schematics/dist/schematics/collection.json && mkdir -p projects/my-lib/schematics/dist/schematics/update-2-0-0 && cp projects/my-lib/schematics/update-2-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-2-0-0/schema.json"
   },
   "private": true,
   "dependencies": {
