--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build my-lib && npm run link:lib",
-    "build:schematics": "tsc -p projects/my-lib/schematics/tsconfig.schematics.json && cp projects/my-lib/schematics/collection.json projects/my-lib/schematics/dist/schematics/collection.json && mkdir -p projects/my-lib/schematics/dist/schematics/update-2-0-0 && cp projects/my-lib/schematics/update-2-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-2-0-0/schema.json",
+    "build:schematics": "tsc -p projects/my-lib/schematics/tsconfig.schematics.json && cp projects/my-lib/schematics/collection.json projects/my-lib/schematics/dist/schematics/collection.json && mkdir -p projects/my-lib/schematics/dist/schematics/update-2-0-0 projects/my-lib/schematics/dist/schematics/update-3-0-0 projects/my-lib/schematics/dist/schematics/update-4-0-0 projects/my-lib/schematics/dist/schematics/update-5-0-0 projects/my-lib/schematics/dist/schematics/update-6-0-0 && cp projects/my-lib/schematics/update-2-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-2-0-0/schema.json && cp projects/my-lib/schematics/update-3-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-3-0-0/schema.json && cp projects/my-lib/schematics/update-4-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-4-0-0/schema.json && cp projects/my-lib/schematics/update-5-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-5-0-0/schema.json && cp projects/my-lib/schematics/update-6-0-0/schema.json projects/my-lib/schematics/dist/schematics/update-6-0-0/schema.json",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "e2e": "ng e2e",
@@ -58,6 +58,6 @@
     "ng-packagr": "^18.2.0",
     "nyc": "^15.1.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "^8.46.4",
+    "typescript-eslint": "^8.46.4"
   }
 }
