--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "eslint . --fix",
     "start": "ng serve my-app",
     "test:app": "ng test my-app --karma-config=./karma.conf.js --code-coverage=true --watch=false",
-    "test:schematics": "npx nyc --reporter=lcov --reporter=text npx jasmine projects/my-lib/schematics/dist/schematics/**/*.spec.js",
+    "test:schematics": "npx nyc --reporter=lcov --reporter=text --exclude='**/*.spec.js' npx jasmine projects/my-lib/schematics/dist/schematics/**/*.spec.js",
     "test:unit": "ng test my-lib --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
     "watch-app": "ng serve my-app --watch",
