refactor: update linting scripts to target specific library directory

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cypress:run": "cypress run",
     "e2e": "ng e2e",
     "link:lib": "npm link ./dist/my-lib",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint:lib": "eslint projects/my-lib",
+    "lint:lib:fix": "eslint projects/my-lib --fix",
     "start": "ng serve my-app",
     "test:app": "ng test my-app --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:e2e-ci": "ng e2e-ci",
