chore: add tsd package for TypeScript definition management

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^18.2.0",
     "nyc": "^15.1.0",
+    "tsd": "^0.33.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.46.4"
   }
