--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:unit": "ng test my-lib --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
     "watch-app": "ng serve my-app --watch",
-    "watch-lib": "ng build my-lib --watch --configuration development"
+    "watch-lib": "ng build my-lib --watch --configuration development",
+    "test:tsd:signal-input-demo": "tsd projects/my-app/src/app/components/signal-input-demo/signal-input-demo.component.tsd.ts"
   },
   "private": true,
   "dependencies": {
