--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
     "watch-app": "ng serve my-app --watch",
     "watch-lib": "ng build my-lib --watch --configuration development",
-    "test:tsd:signal-input-demo": "tsd projects/my-app/src/app/components/signal-input-demo/signal-input-demo.component.tsd.ts"
+    "test:typecheck:signal-input-demo": "tsc --noEmit tsd/signal-input-demo.typecheck.ts"
   },
   "private": true,
   "dependencies": {
