--- a/eslint-plugin-angular-signal/package.json
+++ b/eslint-plugin-angular-signal/package.json
@@ -1,9 +1,10 @@
 {
   "name": "eslint-plugin-angular-signal",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "keywords": ["eslint", "eslintplugin", "angular", "signal"],
   "peerDependencies": {
-    "eslint": ">=8.0.0"
+    "eslint": ">=9.0.0"
   }
 }
