--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test:ng-new": "node projects/my-lib/schematics/ng-new/test-ng-new-schematic.js",
     "test:unit": "ng test my-lib --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
-    "watch-app": "ng serve my-app --watch",
-    "watch-lib": "ng build my-lib --watch --configuration development",
+    "watch:app": "ng serve my-app --watch",
+    "watch:lib": "ng build my-lib --watch --configuration development",
     "test:typecheck:signal-input-demo": "tsc --noEmit tsd/signal-input-demo.typecheck.ts"
   },
   "private": true,
