--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "ngx-owl-carousel-o": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.0",
