chore: add ng-add schematic and related files for eslint-plugin-angular-signal

--- a/eslint-plugin-angular-signal/package.json
+++ b/eslint-plugin-angular-signal/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "keywords": ["eslint", "eslintplugin", "angular", "signal"],
+  "keywords": [
+    "eslint",
+    "eslintplugin",
+    "angular",
+    "signal"
+  ],
   "peerDependencies": {
     "eslint": ">=9.0.0"
-  }
+  },
+  "schematics": "./schematics/collection.json"
 }
