--- a/projects/my-lib/tsconfig.schematics.json
+++ b/projects/my-lib/tsconfig.schematics.json
@@ -1,12 +1,13 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "outDir": "dist/schematics",
-    "rootDir": ".",
+    "rootDir": "./schematics",
     "declaration": true,
     "module": "commonjs",
     "target": "es2018",
     "moduleResolution": "node"
   },
-  "include": ["**/*.ts", "**/*.spec.ts"]
+  "include": ["schematics/**/*.ts", "schematics/**/*.spec.ts"]
 }
