--- a/projects/my-lib/tsconfig.schematics.json
+++ b/projects/my-lib/tsconfig.schematics.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist/schematics",
+    "outDir": "../../dist/my-lib/schematics",
     "rootDir": "./schematics",
     "declaration": true,
     "module": "commonjs",
