chore: add migrations and schematics configuration to package.json

--- a/projects/my-lib/package.json
+++ b/projects/my-lib/package.json
@@ -8,5 +8,7 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "migrations": "./schematics/migrations.json",
+  "schematics": "./schematics/collection.json"
 }
