chore: update package.json and schematics configuration for eslint-plugin-angular-signal

--- a/eslint-plugin-angular-signal/package.json
+++ b/eslint-plugin-angular-signal/package.json
@@ -18,6 +18,7 @@
   },
   "schematics": "./schematics/collection.json",
   "devDependencies": {
-    "@angular-devkit/schematics": "^21.0.3"
+    "@angular-devkit/schematics": "^21.0.3",
+    "typescript": "~5.9.3"
   }
 }
