chore: update rootDir in tsconfig.schematics.json for correct path resolution

--- a/eslint-plugin-angular-signal/schematics/tsconfig.schematics.json
+++ b/eslint-plugin-angular-signal/schematics/tsconfig.schematics.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../dist/schematics",
-    "rootDir": "./ng-add",
+    "rootDir": "./",
     "types": ["node"],
     "module": "commonjs",
     "moduleResolution": "node",
