--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "test:e2e-ci": "ng e2e-ci",
     "test:schematics": "./projects/my-lib/schematics/test.sh",
     "test:ng-new": "node projects/my-lib/schematics/ng-new/test-ng-new-schematic.js",
+    "test:typecheck:signal-input-demo": "tsc --noEmit tsd/signal-input-demo.typecheck.ts",
     "test:unit": "ng test my-lib --karma-config=./karma.conf.js --code-coverage=true --watch=false",
     "test:unit:clean": "npm run test:unit 2>&1 | grep -v 'Could not resolve keysym\\|Errors from xkbcomp'",
     "watch:app": "ng serve my-app --watch",
-    "watch:lib": "ng build my-lib --watch --configuration development",
-    "test:typecheck:signal-input-demo": "tsc --noEmit tsd/signal-input-demo.typecheck.ts"
+    "watch:lib": "ng build my-lib --watch --configuration development"
   },
   "private": true,
   "dependencies": {
