chore: update .npmignore to include additional files and directories for exclusion

--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,16 @@
-dist/**/*.spec.d.ts
-dist/**/*.spec.js
-dist/**/*.spec.js.map
+.angular/
+.idea/
+.nyc_output/
+.vscode/
+coverage/
+dist/
+eslint-plugin-angular-signal/
+.editorconfig
+CONTRIBUTING.md
+karma.conf.js
+tsconfig.spec.json
+tsconfig.test.json
+tsconfig.e2e.json
+**/*.spec.d.ts
+**/*.spec.js
+**/*.spec.js.map
