chore: add production build script to remove spec files

--- a/eslint-plugin-angular-signal/package.json
+++ b/eslint-plugin-angular-signal/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:schematics": "./schematics/build.sh",
+    "build:schematics:prod": "./schematics/build.sh --prod",
     "test:schematics": "./schematics/test.sh"
   },
   "keywords": [
