chore: add ng-add configuration to package.json for eslint-plugin-angular-signal and my-lib

--- a/eslint-plugin-angular-signal/package.json
+++ b/eslint-plugin-angular-signal/package.json
@@ -18,6 +18,9 @@
     "eslint": ">=9.0.0"
   },
   "schematics": "./schematics/collection.json",
+  "ng-add": {
+    "save": "devDependencies"
+  },
   "devDependencies": {
     "@angular-devkit/schematics": "^21.0.3",
     "typescript": "~5.9.3"
