chore: add Angular-20-compatible runtime packages

--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@angular/platform-browser": "^20.3.16",
     "@angular/platform-browser-dynamic": "^20.3.16",
     "@angular/router": "^20.3.16",
+    "@fortawesome/angular-fontawesome": "^2.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "ngx-owl-carousel-o": "^20.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
@@ -60,6 +63,7 @@
     "@typescript-eslint/parser": "^8.33.1",
     "@typescript-eslint/types": "^8.56.0",
     "@typescript-eslint/utils": "^8.33.1",
+    "angular-in-memory-web-api": "^0.20.0",
     "cypress": "15.6.0",
     "eslint": "^9.28.0",
     "eslint-plugin-jsonc": "^2.21.0",
